# CV_info_extracted

./: README.md  main.py  output.json  pyproject.toml  requirements.txt
src/output_model/: output_model.py
src/process_image/: image_processor.py
src/process_pdf/: pdf_reader.py
src/validation/: validator.py
src/wokrflow/: workflow.py
